# level2-3-recsys-finalproject-recsys-06

./: .gitignore  DataPreprocessing.ipynb  README.md  api_upload.py  db_upload.py  main.py  make_corpus.py  pyproject.toml  streamlit_demo.py  train_fasttext.py
app/api/: api.py  streamlit.py
app/models/EASE/: dataloader.py  main.py  metrics.py  models.py  modules_for_preprocess.py  pyproject.toml  recmodels.py  runners.py  trainers.py  utils.py
app/models/fasttext/: make_corpus.py  train_fasttext.py
db/: db.py
