[tool.poetry]
name = "cteeeda"
version = "0.1.0"
description = ""
authors = ["wooksbaby <wooksbaby@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
ipykernel = "^6.29.3"
jupyter = "^1.0.0"
pydrive = "^1.3.1"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
gensim = "^4.3.2"
konlpy = "^0.6.0"
openai = "^1.13.3"
langchain = "^0.1.11"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"
plotly = "^5.20.0"
hdbscan = "^0.8.33"
aiomysql = "^0.2.0"
fastapi = "^0.110.0"
uvicorn = "^0.28.1"
torch = "^2.2.1"
rank-bm25 = "^0.2.2"
bottleneck = "^1.3.8"
streamlit = "^1.32.2"
selenium = "^4.18.1"
scipy = "^1.12.0"
pydantic = "^2.6.4"
webdriver-manager = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
